--- a/src/js/components/Repos.css
+++ b/src/js/components/Repos.css
@@ -3,9 +3,9 @@
 }
 
 .elements {
-    width: 40%;
     display: flex;
     justify-content: flex-start;
+    align-items: baseline;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding-bottom: 10px;
 }
@@ -19,21 +19,26 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.star {
-    width: 6%;
-    margin-top: -5px;
-}
-
 .commit {
     margin-left: 30px;
     color: gray;
 }
 
 .score {
-    margin-left: 5px;
+    margin-left: -380px;
+    position: relative;
 }
 
 .github {
-    width: 10%;
-    margin: -10px 0 0 -10px;
+    width: 16%;
+    margin-bottom: -6px;
+}
+
+.star {
+    position: absolute;
+    width: 20px;
+    top: 0;
+    bottom: 5px;
+    margin: auto 0;
+    margin-left: -25px;
 }
