--- a/src/js/components/Repository.css
+++ b/src/js/components/Repository.css
@@ -1,4 +1,56 @@
-.repository {
+.mainInfo {
+    margin-top: 20px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.owner {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.avatar {
+    width: 150px;
+    margin-top: 25px;
+}
+
+.title {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: 20px;
+    font-weight: bold;
+    font-size: 20pt;
+}
+
+.score {
+    margin-left: 25px;
+    position: relative;
+}
+
+.commit {
+    margin-left: 20px;
+    color: gray;
+}
+
+.star {
+    position: absolute;
+    width: 20px;
+    top: 0;
+    bottom: 5px;
+    margin: auto 0;
+    margin-left: -25px;
+}
+
+.languages {
+    margin-left: 200px;
+}
+
+.contributor {
+    margin-left: 30px;
+}
+
+.description {
+    width: 100px;
+    align-self: flex-end;
+    margin-left: -500px;
 }
