--- a/src/js/components/Repository.css
+++ b/src/js/components/Repository.css
@@ -1,8 +1,11 @@
+.container {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
 .mainInfo {
     margin-top: 20px;
     display: flex;
     justify-content: flex-start;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .owner {
@@ -16,7 +19,6 @@
 }
 
 .title {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin-top: 20px;
     font-weight: bold;
     font-size: 20pt;
@@ -41,16 +43,25 @@
     margin-left: -25px;
 }
 
-.languages {
-    margin-left: 200px;
-}
-
-.contributor {
+.description {
+    width: 700px;
     margin-left: 30px;
 }
 
-.description {
-    width: 100px;
-    align-self: flex-end;
-    margin-left: -500px;
+.list {
+    width: 30%;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 180px;
+}
+
+.back {
+    border: none;
+    font-size: 14pt;
+    background-color: white;
+    border-bottom: 1px solid gray;
+}
+
+.login {
+    font-size: 14pt;
 }
