--- a/src/js/components/Repository.css
+++ b/src/js/components/Repository.css
@@ -49,7 +49,7 @@
 }
 
 .list {
-    width: 30%;
+    width: 400px;
     display: flex;
     justify-content: space-between;
     margin-left: 180px;
